login double border issue solved

--- a/src/components/Teams/teams.css
+++ b/src/components/Teams/teams.css
@@ -34,7 +34,7 @@
     padding-top: 2%;
 }
 
-form {
+#teams_body form {
     display: flex;
     padding: 1rem 1rem;
     align-items: center;
